--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -17,9 +17,9 @@
 
 <body>
 
-<h1>Welcome to PhoneGap!</h1>
+<h1>Welcome to Juridica!</h1>
 
-<p>Hi!</p>
+<p>Hola! Aqui puedes ver el listado de articulos de juridica.com.ar</p>
 
 <!-- weinre console available at http://debug.phonegap.com/client/#hella-foobar -->
 <script src="http://debug.phonegap.com/target/target-script-min.js#hella-foobar"></script>
