--- a/assets/www/main.html
+++ b/assets/www/main.html
@@ -2,13 +2,9 @@
 <html>
   <head>
     <title>Acceleration Example</title>
-
+     <script src="cordova-1.5.0.js"></script>
    
-  <script src="cordova-1.5.0.js"></script>
     <script type="text/javascript" charset="utf-8">
-
-    // The watch id references the current `watchAcceleration`
-    var watchID = null;
 
     // Wait for device API libraries to load
     //
@@ -17,36 +13,16 @@
     // device APIs are available
     //
     function onDeviceReady() {
-        startWatch();
-    }
-
-    // Start watching the acceleration
-    //
-    function startWatch() {
-
-        // Update acceleration every 3 seconds
-        var options = { frequency: 3000 };
-
-        watchID = navigator.accelerometer.watchAcceleration(onSuccess, onError, options);
-    }
-
-    // Stop watching the acceleration
-    //
-    function stopWatch() {
-        if (watchID) {
-            navigator.accelerometer.clearWatch(watchID);
-            watchID = null;
-        }
+        navigator.accelerometer.getCurrentAcceleration(onSuccess, onError);
     }
 
     // onSuccess: Get a snapshot of the current acceleration
     //
     function onSuccess(acceleration) {
-        var element = document.getElementById('accelerometer');
-        element.innerHTML = 'Acceleration X: ' + acceleration.x         + '<br />' +
-                            'Acceleration Y: ' + acceleration.y         + '<br />' +
-                            'Acceleration Z: ' + acceleration.z         + '<br />' +
-                            'Timestamp: '      + acceleration.timestamp + '<br />';
+        alert('Acceleration X: ' + acceleration.x + '\n' +
+              'Acceleration Y: ' + acceleration.y + '\n' +
+              'Acceleration Z: ' + acceleration.z + '\n' +
+              'Timestamp: '      + acceleration.timestamp + '\n');
     }
 
     // onError: Failed to get the acceleration
@@ -58,6 +34,7 @@
     </script>
   </head>
   <body>
-    <div id="accelerometer">Waiting for accelerometer...</div>
+    <h1>Example</h1>
+    <p>getCurrentAcceleration</p>
   </body>
 </html>
