--- a/assets/www/main.html
+++ b/assets/www/main.html
@@ -1,40 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Acceleration Example</title>
+    <title>Juridica</title>
      <script src="cordova-1.5.0.js"></script>
-   
-    <script type="text/javascript" charset="utf-8">
-
-    // Wait for device API libraries to load
-    //
-    document.addEventListener("deviceready", onDeviceReady, false);
-
-    // device APIs are available
-    //
-    function onDeviceReady() {
-        navigator.accelerometer.getCurrentAcceleration(onSuccess, onError);
-    }
-
-    // onSuccess: Get a snapshot of the current acceleration
-    //
-    function onSuccess(acceleration) {
-        alert('Acceleration X: ' + acceleration.x + '\n' +
-              'Acceleration Y: ' + acceleration.y + '\n' +
-              'Acceleration Z: ' + acceleration.z + '\n' +
-              'Timestamp: '      + acceleration.timestamp + '\n');
-    }
-
-    // onError: Failed to get the acceleration
-    //
-    function onError() {
-        alert('onError!');
-    }
-
-    </script>
-  </head>
+     </head>
   <body>
-    <h1>Example</h1>
-    <p>getCurrentAcceleration</p>
+    <h1>Bienvenidos a Juridica</h1>
+    <p>Esta es una aplicacion de prueba. Disponible en Andoid, iOS, Blackberry</p>
   </body>
 </html>
