--- a/assets/www/main.html
+++ b/assets/www/main.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Juridica</title>
-     <script src="cordova-1.5.0.js"></script>
+   <title>Audio Stream Example</title>
+
+	<!-- JavaScript -->
+	<script type="text/javascript">
+		// Auto Start
+		window.onload = function() { playStream(); };
+		// Code from http://www.joeldare.com/wiki/play_an_mp3_audio_stream_in_phonegap
+		function playStream() {
+		  try {
+		    var myaudio = new Audio('http://icecast.ksl.com:8000/');
+		    myaudio.id = 'playerMyAdio';
+		    myaudio.play();
+		  } catch (e) {
+		    alert('no audio support!');
+		  }
+		}
+	</script>
+
+	<!-- CSS -->
+	<style type="text/css">
+	
+
+		body { background-color: white; margin: 0; padding: 0; font-family: sans-serif; font-size: 12px; }
+		p { margin-bottom: 10px; }
+
+	
+	</style>
+  <script src="cordova-1.5.0.js"></script>
      </head>
   <body>
-    <h1>Bienvenidos a Juridica</h1>
-    <p>Esta es una aplicacion de prueba. Disponible en Andoid, iOS, Blackberry</p>
+   <button onclick="playStream()">Listen Live</button>
   </body>
 </html>
