--- a/assets/www/main.html
+++ b/assets/www/main.html
@@ -1,53 +1,102 @@
-<!DOCTYPE html>
-<html>
-  <head>
-   <title>Audio Stream Example</title>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+    <html>
+      <head>
+        <title>Media Example</title>
 
-	<!-- JavaScript -->
-	<script type="text/javascript" src="script/soundmanager2.js"></script>
-	<script type="text/javascript">
+       <script type="text/javascript" charset="utf-8" src="cordova-6-july.js"></script>
+        <script type="text/javascript" charset="utf-8">
 
-soundManager.url = 'swf/';
+        // Wait for Cordova to load
+        //
+        document.addEventListener("deviceready", onDeviceReady, false);
 
-soundManager.debugMode = true;
-soundManager.preferFlash = false;
-soundManager.useFlashBlock = true;
-soundManager.flashVersion = 9;
-soundManager.useHighPerformance = true; 
-soundManager.useFastPolling = true; 
+        // Cordova is ready
+        //
+        function onDeviceReady() {
+            playAudio("http://5.39.66.196:8073/;stream.mp3");
+        }
 
-soundManager.onready(function(){
+        // Audio player
+        //
+        var my_media = null;
+        var mediaTimer = null;
 
-  var bleh = soundManager.createSound({
-   id: 'NoLife-Radio',
-   url: 'http://icecast.ksl.com:8000/',
-   type: 'audio/mp3', // 'audio/mp4' ?
-   autoPlay: false,
-   stream: true,
-   autoLoad: true
-  });
-});
+        // Play audio
+        //
+        function playAudio(src) {
+            // Create Media object from src
+            my_media = new Media(src, onSuccess, onError);
 
-soundManager.ontimeout(function(){
+            // Play audio
+            my_media.play();
 
-  // Hrmm, SM2 could not start. Flash blocker involved? Show an error, etc.?
-  alert("Could not start");
-});
+            // Update my_media position every second
+            if (mediaTimer == null) {
+                mediaTimer = setInterval(function() {
+                    // get my_media position
+                    my_media.getCurrentPosition(
+                        // success callback
+                        function(position) {
+                            if (position > -1) {
+                                setAudioPosition((position) + " sec");
+                            }
+                        },
+                        // error callback
+                        function(e) {
+                            console.log("Error getting pos=" + e);
+                            setAudioPosition("Error: " + e);
+                        }
+                    );
+                }, 1000);
+            }
+        }
 
-</script>
+        // Pause audio
+        // 
+        function pauseAudio() {
+            if (my_media) {
+                my_media.pause();
+            }
+        }
 
-	<!-- CSS -->
-	<style type="text/css">
-	
+        // Stop audio
+        // 
+        function stopAudio() {
+            if (my_media) {
+                my_media.stop();
+            }
+            clearInterval(mediaTimer);
+            mediaTimer = null;
+        }
 
-		body { background-color: white; margin: 0; padding: 0; font-family: sans-serif; font-size: 12px; }
-		p { margin-bottom: 10px; }
+        // onSuccess Callback
+        //
+        function onSuccess() {
+            console.log("playAudio():Audio Success");
+        }
 
-	
-	</style>
-  <script src="cordova-1.5.0.js"></script>
-     </head>
-  <body>
-   <a href="#" onClick="javascript: soundManager.play('NoLife-Radio');">Play</a>
-  </body>
-</html>
+        // onError Callback 
+        //
+        function onError(error) {
+            alert('code: '    + error.code    + '\n' + 
+                  'message: ' + error.message + '\n');
+        }
+
+        // Set audio position
+        // 
+        function setAudioPosition(position) {
+            document.getElementById('audio_position').innerHTML = position;
+        }
+
+        </script>
+      </head>
+      <body>
+      <br><br>
+        <a href="#" class="btn large" onclick="playAudio('http://5.39.66.196:8073/;stream.mp3');">Play Audio</a>
+        <br><br>
+        <a href="#" class="btn large" onclick="pauseAudio();">Pause Playing Audio</a>
+        &nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;
+        <a href="#" class="btn large" onclick="stopAudio();">Stop Playing Audio</a>
+        <p id="audio_position"></p>
+      </body>
+    </html>
