--- a/assets/www/main.html
+++ b/assets/www/main.html
@@ -13,7 +13,7 @@
         // Cordova is ready
         //
         function onDeviceReady() {
-            playAudio("http://5.39.66.196:8073/;stream.mp3");
+            playAudio("http://icecast.ksl.com:8000/;");
         }
 
         // Audio player
